tests/NormalTests/paczka1/small_fuzzy/13544182.err
Error in line 1: 0CSpJb94 A463 68,6
Error in line 3: z4PR S603 99,3
Error in line 7: gQLkc A299 1,4
Error in line 13: gQLkc A463 3,5
